Fixed target point loader and added example